force-app/main/default/objects/SS_Community__c/SS_Community__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is a list of settings used in the Community implementation.</description>
    <label>7Summits Community</label>
</CustomObject>