force-app/main/default/objects/SS_Community__c/fields/Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Name__c</fullName>
    <defaultValue>&quot;A Customer Zone&quot;</defaultValue>
    <description>This should match the label of the Community</description>
    <label>Community Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>