force-app/main/default/objects/SS_Community__c/fields/Community_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Profile_Name__c</fullName>
    <defaultValue>&quot;Customer Community Login User&quot;</defaultValue>
    <description>Label of the Profile assigned to Community Users</description>
    <label>Community Profile Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>