force-app/main/default/objects/SS_Community__c/fields/Default_Community_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Default_Community_Account_Name__c</fullName>
    <defaultValue>&quot;Test Community Customer 01&quot;</defaultValue>
    <description>Name of the Account to assign new Community users to</description>
    <label>Default Community Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>