force-app/main/default/objects/SS_Community__c/fields/Show_Group_List__c.field-meta.xml
<CustomField>
    <fullName>Show_Group_List__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the User belongs to an account without a Group associated, whether to show the Chatter Group List or an error page.</description>
    <label>Show Group List</label>
    <type>Checkbox</type>
</CustomField>