force-app/main/default/objects/SS_Community__c/fields/Unauthenticated_Community_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Unauthenticated_Community_Profile_Name__c</fullName>
    <defaultValue>&quot;7Summits Customer Community Profile&quot;</defaultValue>
    <description>Label of the Profile assigned to unauthenticated community guest user</description>
    <label>Unauthenticated Community Profile Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>