force-app/main/default/objects/SS_Community__c/fields/Username_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Username_Suffix__c</fullName>
    <defaultValue>&quot;@7SummitsCommunity.com&quot;</defaultValue>
    <description>Suffix assigned to create usernames. Ex. @7SummitsCommunity.com</description>
    <label>Username Suffix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>